--- a/nginx/ruoyi.conf
+++ b/nginx/ruoyi.conf
@@ -175,7 +175,7 @@ server {
                 proxy_set_header Connection "upgrade";
         }
 
-        # ios appid ,地址： https://testqili.lvzhiyi100.com/.well-known/apple-app-site-association
+        # ios appid , 暴露文件
         location /.well-known {
                 alias /data/app/tengine/h5/apple-app-site-association/;
                 charset utf-8;
